--- a/index.html
+++ b/index.html
@@ -435,15 +435,45 @@
         <form class="modal-form">
           <div class="modal-field">
             <label for="user-name" class="input-text">Name</label>
-            <input type="text" class="modal-input" name="user-name" required id="user-name" />
+            <div class="input-wrap">
+              <input type="text" class="modal-input" name="user-name" required id="user-name" />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-field">
             <label for="user-tel" class="input-item">Phone</label>
-            <input type="tel" class="modal-input" name="user-tel" required id="user-tel" />
+            <div class="input-wrap">
+              <input type="tel" class="modal-input" name="user-tel" required id="user-tel" />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-field">
             <label for="user-email" class="input-item">Email</label>
-            <input type="email" class="modal-input" name="user-email" id="user-email" />
+            <div class="input-wrap">
+              <input type="email" class="modal-input" name="user-email" id="user-email" />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/symbol-defs.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-text" class="input-item">Comment</label>
+            <textarea
+              class="modal-comet"
+              placeholder="Text input"
+              name="user-text"
+              id="user-text"
+            ></textarea>
+          </div>
+          <div class="modal-field">
+            <input type="checkbox" class="accept-input visually-hidden" name="accept" id="accept" value="accept" required/>
+            <label class="accept-text" for="accept"
+              >I accept the terms and conditions of the <span class="accept-span"><a class="accept-link" href="">Privacy Policy</a></span>
+            </label>
           </div>
           <button type="submit">Send</button>
         </form>
